<resources>
    <string name="app_name">RaffleApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ana Sayfa</string>
    <string name="menu_yeni_baslayanlar">Yeni Başlayanlar</string>
    <string name="menu_bedava_katilim">Bedava Katılım</string>
    <string name="menu_araba_kazan">Araba Kazan</string>
    <string name="menu_telefon_tablet_kazan">Telefon Tablet Kazan</string>
    <string name="menu_tatil_kazan">Tatil Kazan</string>
    <string name="menu_takip_ettiklerim">Takip Ettiklerim</string>
    <string name="detail">Detay</string>

</resources>