<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_yeni_baslayanlar"
            android:icon="@drawable/latest"
            android:title="@string/menu_yeni_baslayanlar" />
        <item
            android:id="@+id/nav_bedava_katilim"
            android:icon="@drawable/free"
            android:title="@string/menu_bedava_katilim" />
        <item
            android:id="@+id/nav_araba_kazan"
            android:icon="@drawable/car"
            android:title="@string/menu_araba_kazan" />
        <item
            android:id="@+id/nav_telefon_tablet_kazan"
            android:icon="@drawable/phone"
            android:title="@string/menu_telefon_tablet_kazan" />
        <item
            android:id="@+id/nav_tatil_kazan"
            android:icon="@drawable/vacation"
            android:title="@string/menu_tatil_kazan" />
        <item
            android:id="@+id/nav_takip_ettiklerim"
            android:icon="@drawable/following"
            android:title="@string/menu_takip_ettiklerim" />
    </group>
</menu>